--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,7 @@
 ---
-import { Button } from "@nextui-org/react";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-		<Button color="primary" client:visible>My button</Button>
-	</body>
-</html>
+<BaseLayout title="Inicio">
+	<p>Desde Index</p>
+</BaseLayout>
