--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import { MainNavigation } from "../components/react/MainNavigation.jsx";
+import Footer from "../components/Footer.astro";
 const { title } = Astro.props;
 ---
 
@@ -15,5 +16,6 @@ const { title } = Astro.props;
         <MainNavigation client:visible />
         <h1>{title} | Academia de Ajedrez</h1>
         <slot />
+        <Footer />
     </body>
 </html>
