Cree las nuevas paginas del menu y agregué imagenes para el carrousel

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,13 +4,13 @@
     >
         <div class="self-center">
             <img
-                class="w-32"
+                class="w-32 md:w-40"
                 src="/LogoPlaceHolder.svg"
                 alt="placeholder logo"
             />
         </div>
         <div>
-            <ul class="text-lg sm:text-base">
+            <ul class="text-lg sm:text-base text-center">
                 <li>
                     <a class="hover:underline" href="/">Inicio</a>
                 </li>
