--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { HeroSection } from "../components/react/HeroSection.jsx";
+// const carrouselImages = await Astro.glob("../assets/img/carrousel/*.{jpg,jpeg,png")
 import { carrouselImages } from "../scripts/helpers/carrouselData.js";
 ---
 
