Se reubico el logoplaceholder en assets

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,7 @@
+---
+import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
+---
+
 <footer class="bg-slate-100 py-5 text-sm">
     <div
         class="grid grid-cols-2 md:grid-cols-3 md:container md:mx-auto lg:max-w-[1024px] justify-items-center gap-y-4 mb-4"
@@ -5,7 +9,7 @@
         <div class="self-center">
             <img
                 class="w-32 md:w-40"
-                src="/LogoPlaceHolder.svg"
+                src={LogoPlaceHolder.src}
                 alt="placeholder logo"
             />
         </div>
