--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { HeroSection } from "../components/react/HeroSection.jsx";
+import OurGoalSection from "../components/OurGoalSection.astro";
 const carrouselImages = await Astro.glob(
 	"/src/assets/img/carrousel/*.{jpg,jpeg,png}",
 ).then((files) => files.map((file) => file.default));
@@ -9,5 +10,6 @@ const carrouselImages = await Astro.glob(
 <BaseLayout title="Inicio">
 	<main>
 		<HeroSection carrouselImages={carrouselImages} client:visible />
+		<OurGoalSection />
 	</main>
 </BaseLayout>
