--- a/src/components/Discover.astro
+++ b/src/components/Discover.astro
@@ -3,8 +3,8 @@ import { Button, Link } from "@nextui-org/react";
 import GiftImg from "../assets/img/giveaway.svg";
 ---
 
-<section class="p-8 md:px-24 lg:px-32 flex flex-col">
-    <h2 class="text-4xl text-center mb-10 font-bold">
+<section class="px-8 py-20 sm:px-24 lg:px-32 flex flex-col">
+    <h2 class="text-4xl text-center mb-10 md:mb-16 font-bold">
         ¡Descubre el Ajedrez Hoy!
     </h2>
     <div
