--- a/src/components/OurGoalSection.astro
+++ b/src/components/OurGoalSection.astro
@@ -17,7 +17,7 @@ import KingQueenImg from "../assets/img/king-queen.svg";
                 >
                     <FaQuoteRight />
                 </div>
-                <h2 class="text-4xl text-center mb-10 font-bold">
+                <h2 class="text-4xl text-center mb-10 md:mb-16 font-bold">
                     Nuestro Objetivo
                 </h2>
                 <div
