--- a/src/components/FreeCourseSection.astro
+++ b/src/components/FreeCourseSection.astro
@@ -1,17 +1,39 @@
 ---
-
+import { Image } from "astro:assets";
+const { courseName, youtubePlaylist, showArrow } = Astro.props;
+import flexingArrow from "../assets/img/flexing-arrow.svg";
 ---
 
 <section class="container mx-auto">
-    <div class="flex flex-col items-center">
-        <h2>Curso Básico</h2>
-        <div class="w-full">
+    <div
+        class="mx-auto relative flex flex-col items-center pt-10 px-8 sm:px-24 md:px-32 pb-10 lg:order-1 md:pb-20 lg:px-24 lg:max-w-[1280px]"
+    >
+        <h2 class="text-2xl sm:text-4xl text-center mb-10 font-bold">
+            {courseName}
+        </h2>
+        {
+            showArrow && (
+                <div class="hidden sm:block absolute top-4 right-10">
+                    <div class="relative">
+                        <Image
+                            class="w-32"
+                            src={flexingArrow}
+                            alt="Flecha apuntando hacia la lista de reproducción"
+                        />
+                        <span class="absolute top-14 -right-4 font-semibold -rotate-12">
+                            Playlist!
+                        </span>
+                    </div>
+                </div>
+            )
+        }
+        <div class="w-full max-w-[1024px]">
             <iframe
                 class="aspect-video w-full"
-                src="https://www.youtube.com/embed/videoseries?si=bHab7iRdOmI7EIP8&list=PLyOF_3OuFCs4CLi4aXZ_wD2qzb2VVMoBO"
+                src={youtubePlaylist}
                 title="YouTube video player"
                 frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;"
                 allowfullscreen></iframe>
         </div>
     </div>
