--- a/src/pages/free-course.astro
+++ b/src/pages/free-course.astro
@@ -1,18 +1,20 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import FreeCourseSection from "../components/FreeCourseSection.astro";
+import EnjoyGiftSection from "../components/EnjoyGiftSection.astro";
 ---
 
 <BaseLayout title="Curso Gratuito">
-    <main>
-        <FreeCourseSection
-            courseName="Curso Básico"
-            youtubePlaylist="https://www.youtube.com/embed/videoseries?si=bHab7iRdOmI7EIP8&list=PLyOF_3OuFCs4CLi4aXZ_wD2qzb2VVMoBO"
-            showArrow={true}
-        />
-        <FreeCourseSection
-            courseName="Curso Intermedio"
-            youtubePlaylist="https://www.youtube.com/embed/videoseries?si=Q-hmWfN4bYF0T3ol&list=PLyOF_3OuFCs5DzSPCXqChZaAvsa4AE1M_"
-        />
-    </main>
+  <main>
+    <EnjoyGiftSection />
+    <FreeCourseSection
+      courseName="Curso Básico"
+      youtubePlaylist="https://www.youtube.com/embed/videoseries?si=bHab7iRdOmI7EIP8&list=PLyOF_3OuFCs4CLi4aXZ_wD2qzb2VVMoBO"
+      showArrow={true}
+    />
+    <FreeCourseSection
+      courseName="Curso Intermedio"
+      youtubePlaylist="https://www.youtube.com/embed/videoseries?si=Q-hmWfN4bYF0T3ol&list=PLyOF_3OuFCs5DzSPCXqChZaAvsa4AE1M_"
+    />
+  </main>
 </BaseLayout>
