--- a/src/components/FreeCourseSection.astro
+++ b/src/components/FreeCourseSection.astro
@@ -12,7 +12,7 @@ import flexingArrow from "../assets/img/flexing-arrow.svg";
     </h2>
     {
       showArrow && (
-        <div class="hidden sm:block absolute top-4 right-10">
+        <div class="hidden sm:block absolute top-4 md:top-16 right-10">
           <div class="relative">
             <img
               class="w-32"
