--- a/src/components/OurGoalSection.astro
+++ b/src/components/OurGoalSection.astro
@@ -4,61 +4,59 @@ import KingQueenImg from "../assets/img/king-queen.svg";
 ---
 
 <section>
-    <div class="bg-[#ff8c00c2] lg:bg-inherit">
-        <div class="grid grid-cols-1 lg:grid-cols-2">
-            <div
-                class="relative pt-20 px-8 sm:px-24 md:px-32 lg:order-1 lg:pb-20 lg:px-24"
-            >
-                <div class="absolute text-5xl top-5 left-10 md:text-6xl">
-                    <FaQuoteLeft />
-                </div>
-                <div
-                    class="absolute text-5xl -bottom-14 right-10 md:text-6xl lg:bottom-5"
-                >
-                    <FaQuoteRight />
-                </div>
-                <h2 class="text-4xl text-center mb-10 md:mb-16 font-bold">
-                    Nuestro Objetivo
-                </h2>
-                <div
-                    class="flex flex-col gap-2 text-base md:text-lg lg:order-2"
-                >
-                    <p>
-                        En nuestra academia, aspiramos a ser más que un simple
-                        espacio de aprendizaje. Somos una comunidad abierta y
-                        acogedora, diseñada para <strong>todos</strong>: desde
-                        principiantes curiosos hasta jugadores experimentados.
-                    </p>
-                    <p>
-                        Con un equipo de Maestros de renombre internacional, te
-                        ofrecemos un servicio único, lleno de conocimientos y
-                        pasión por el ajedrez.
-                    </p>
-                    <p>
-                        <strong
-                            >Nuestro objetivo es simple: ayudarte a alcanzar tus
-                            metas mientras disfrutas del proceso.</strong
-                        >
-                    </p>
-                    <p>
-                        Ya sea que sueñes con convertirte en un campeón o
-                        simplemente mejorar tu juego, te acompañaremos en cada
-                        movimiento.
-                    </p>
-                    <p>
-                        ¡Conéctate con nosotros desde cualquier parte del mundo
-                        y comienza tu viaje hacia la maestría ajedrecística hoy
-                        mismo!
-                    </p>
-                </div>
-            </div>
-            <div class="flex justify-center bg-inherit lg:bg-[#ff8c00c2]">
-                <img
-                    class="w-full sm:w-auto"
-                    src={KingQueenImg.src}
-                    alt="Un rey blanco y una dama negra jugando en un subibaja"
-                />
-            </div>
+  <div class="bg-[#ff8c00c2] lg:bg-inherit">
+    <div class="grid grid-cols-1 lg:grid-cols-2">
+      <div
+        class="relative pt-20 px-8 sm:px-24 md:px-32 lg:order-1 lg:pb-20 lg:px-24"
+      >
+        <div class="absolute text-5xl top-5 left-10 md:text-6xl">
+          <FaQuoteLeft />
         </div>
+        <div
+          class="absolute text-5xl -bottom-14 right-10 md:text-6xl lg:bottom-5"
+        >
+          <FaQuoteRight />
+        </div>
+        <!-- <h2 class="text-4xl text-center mb-10 md:mb-16 font-bold"> -->
+        <h2
+          class="mb-8 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white text-center"
+        >
+          Nuestro Objetivo
+        </h2>
+        <div class="flex flex-col gap-2 text-base md:text-lg lg:order-2">
+          <p>
+            En nuestra academia, aspiramos a ser más que un simple espacio de
+            aprendizaje. Somos una comunidad abierta y acogedora, diseñada para <strong
+              >todos</strong
+            >: desde principiantes curiosos hasta jugadores experimentados.
+          </p>
+          <p>
+            Con un equipo de Maestros de renombre internacional, te ofrecemos un
+            servicio único, lleno de conocimientos y pasión por el ajedrez.
+          </p>
+          <p>
+            <strong
+              >Nuestro objetivo es simple: ayudarte a alcanzar tus metas
+              mientras disfrutas del proceso.</strong
+            >
+          </p>
+          <p>
+            Ya sea que sueñes con convertirte en un campeón o simplemente
+            mejorar tu juego, te acompañaremos en cada movimiento.
+          </p>
+          <p>
+            ¡Conéctate con nosotros desde cualquier parte del mundo y comienza
+            tu viaje hacia la maestría ajedrecística hoy mismo!
+          </p>
+        </div>
+      </div>
+      <div class="flex justify-center bg-inherit lg:bg-[#ff8c00c2]">
+        <img
+          class="w-full sm:w-auto"
+          src={KingQueenImg.src}
+          alt="Un rey blanco y una dama negra jugando en un subibaja"
+        />
+      </div>
     </div>
+  </div>
 </section>
