Linkeada la navegación con la seccion precios

--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -3,7 +3,7 @@
 import PriceCard from "./PriceCard.astro";
 ---
 
-<section class="px-8 py-20 sm:px-24 lg:px-32 flex flex-col">
+<section id="pricing" class="px-8 py-20 sm:px-24 lg:px-32 flex flex-col">
   <div class="mx-auto max-w-screen-md text-center mb-8 lg:mb-12">
     <h2
       class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
