--- a/src/components/PriceCard.astro
+++ b/src/components/PriceCard.astro
@@ -14,7 +14,7 @@ const {
 ---
 
 <div
-  class="mb-4 overflow-hidden rounded-lg shadow-lg flex-grow md:w-1/3 md:max-w-[350px] flex flex-col justify-between"
+  class="mb-4 overflow-hidden rounded-lg shadow-lg flex-grow md:w-1/3 md:max-w-[350px] flex flex-col justify-between bg-white"
 >
   <div class="px-6 py-8 bg-white dark:bg-gray-800 sm:p-10 sm:pb-6">
     <div class="flex justify-center">
