Rehice el hero section

--- a/src/components/PathsSection.astro
+++ b/src/components/PathsSection.astro
@@ -4,7 +4,7 @@ import PathImg2 from "../assets/img/journal-tourist-with-map.svg";
 import { PathsTabs } from "./react/PathsTabs.jsx";
 ---
 
-<section class="dark:bg-gray-800 bg-[#ff8c00c2] overflow-hidden">
+<section id="adventure" class="dark:bg-gray-800 bg-[#ff8c00c2] overflow-hidden">
   <div
     class="text-center w-full mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 z-20 relative overflow-hidden md:min-h-[350px]"
   >
