--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,14 +10,6 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
       <li class="my-2">
         <a
           class="text-gray-400 hover:text-gray-800 dark:text-gray-300 dark:hover:text-white transition-colors duration-200"
-          href="/#faq"
-        >
-          FAQ
-        </a>
-      </li>
-      <li class="my-2">
-        <a
-          class="text-gray-400 hover:text-gray-800 dark:text-gray-300 dark:hover:text-white transition-colors duration-200"
           href="/"
         >
           Inicio
@@ -26,9 +18,17 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
       <li class="my-2">
         <a
           class="text-gray-400 hover:text-gray-800 dark:text-gray-300 dark:hover:text-white transition-colors duration-200"
-          href="/academy/"
+          href="/#academy"
         >
           Academia
+        </a>
+      </li>
+      <li class="my-2">
+        <a
+          class="text-gray-400 hover:text-gray-800 dark:text-gray-300 dark:hover:text-white transition-colors duration-200"
+          href="/#faq"
+        >
+          Preguntas Frecuentes
         </a>
       </li>
       <li class="my-2">
