Arreglados algunos retoques visuales en hero section y paths

--- a/src/components/PathsSection.astro
+++ b/src/components/PathsSection.astro
@@ -52,7 +52,7 @@ import { PathsTabs } from "./react/PathsTabs.jsx";
 <!-- Divider -->
 <div class="w-full relative">
   <svg
-    class="h-[180px] w-full fill-[#ff8c00] absolute"
+    class="h-[180px] w-full fill-[#ff8c00] absolute -z-10"
     data-name="Layer 1"
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 1200 120"
