Agregada la seccion de faqs con informacion acorde

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import OurGoalSection from "../components/OurGoalSection.astro";
 import DiscoverSection from "../components/DiscoverSection.astro";
 import PricingSection from "../components/PricingSection.astro";
 import PathsSection from "../components/PathsSection.astro";
+import FAQsSection from "../components/FAQsSection.astro";
 const carrouselImages = await Astro.glob(
   "/src/assets/img/carrousel/*.{jpg,jpeg,png}"
 ).then((files) => files.map((file) => file.default));
@@ -17,5 +18,6 @@ const carrouselImages = await Astro.glob(
     <DiscoverSection />
     <PathsSection />
     <PricingSection />
+    <FAQsSection />
   </main>
 </BaseLayout>
