Pequeños arreglos a el hero, footer y overflow de paths

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,14 +31,14 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
           Preguntas Frecuentes
         </a>
       </li>
-      <li class="my-2">
+      <!-- <li class="my-2">
         <a
           class="text-gray-400 hover:text-gray-800 dark:text-gray-300 dark:hover:text-white transition-colors duration-200"
           href="/contact/"
         >
           Contacto
         </a>
-      </li>
+      </li> -->
     </ul>
     <div class="pt-8 flex max-w-xs mx-auto items-center justify-between">
       <!-- Facebook -->
