--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -18,7 +18,7 @@ import PriceCard from "./PriceCard.astro";
 
   <div class="flex flex-wrap flex-col md:flex-row gap-4 justify-center">
     <PriceCard
-      title="Camino Básico"
+      title="Básico"
       price={50}
       characteristics={[
         "Una clase grupal por semana",
@@ -28,19 +28,19 @@ import PriceCard from "./PriceCard.astro";
       ]}
     />
     <PriceCard
-      title="Camino Intermedio"
+      title="Intermedio"
       price={75}
       characteristics={[
-        'Todo del "Camino Básico" salvo superposiciones',
+        'Todo del plan "Básico" salvo superposiciones',
         "Dos clases grupales por semana",
         "Participación en todos los eventos online",
       ]}
     />
     <PriceCard
-      title="Camino Premium"
+      title="Premium"
       price={100}
       characteristics={[
-        'Todo del "Camino Intermedio" salvo superposiciones',
+        'Todo del plan "Intermedio" salvo superposiciones',
         "Una clase privada con elección de profesor",
         "Descuentos en Eventos Presenciales",
       ]}
@@ -50,18 +50,4 @@ import PriceCard from "./PriceCard.astro";
     Todos los precios son en $USD. Si eres residente de Argentina puedes
     consultar por tarifas especiales.
   </p>
-  <!-- Descomentar para usar este flex -->
-  <!-- <div
-    class="flex flex-col gap-4 md:flex-row md:items-center sm:items-center mb-8 xl:max-w-[1024px] xl:mx-auto"
-  >
-    <div class="md:text-lg">
-      <p>¿Eres nuevo en el mundo del ajedrez?</p>
-      <p>
-        ¡Bienvenido! En nuestra academia, te ofrecemos un curso creado
-        especialmente para ti, <strong>totalmente gratuito</strong>. Aprende las
-        reglas básicas, estrategias fundamentales y comienza tu viaje hacia la
-        maestría ajedrecística de manera divertida y educativa.
-      </p>
-    </div>
-  </div> -->
 </section>
