Se agregaron detalles y datos hablados en ruinion

--- a/src/components/OurGoalSection.astro
+++ b/src/components/OurGoalSection.astro
@@ -28,21 +28,19 @@ import KingQueenImg from "../assets/img/king-queen.svg";
             En nuestra academia, aspiramos a ser más que un simple espacio de
             aprendizaje. Somos una comunidad abierta y acogedora, diseñada para <strong
               >todos</strong
-            >: desde principiantes curiosos hasta jugadores experimentados.
+            >: desde principiantes curiosos hasta ajedrecistas experimentados.
           </p>
           <p>
             Con un equipo de Maestros de renombre internacional, te ofrecemos un
             servicio único, lleno de conocimientos y pasión por el ajedrez.
           </p>
           <p>
-            <strong
-              >Nuestro objetivo es simple: ayudarte a alcanzar tus metas
-              mientras disfrutas del proceso.</strong
-            >
+            <strong>Nuestro objetivo es</strong> ayudarte a alcanzar tus metas mientras
+            disfrutas del <strong>Camino</strong>.
           </p>
           <p>
-            Ya sea que sueñes con convertirte en un campeón o simplemente
-            mejorar tu juego, te acompañaremos en cada movimiento.
+            Ya sea que sueñes con alcanzar la maestría o simplemente mejorar tu
+            juego, te acompañaremos en cada paso.
           </p>
           <p>
             ¡Conéctate con nosotros desde cualquier parte del mundo y comienza
