Agregada nueva opcion en planes y correccion menor de titulo

--- a/src/components/PathsSection.astro
+++ b/src/components/PathsSection.astro
@@ -40,7 +40,7 @@ import { PathsTabs } from "./react/PathsTabs.jsx";
     <h2
       class="mb-8 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
     >
-      Elije tu camino
+      Elije tu Camino
     </h2>
     <p class="mb-5 font-light text-gray-700 sm:text-xl dark:text-gray-400">
       En esta sección, te presentamos diferentes caminos para tu desarrollo en
