Arreglos visuales a TeacherProfile y rellenado de perfiles.

--- a/src/components/OurTeamSection.astro
+++ b/src/components/OurTeamSection.astro
@@ -13,8 +13,8 @@
       <p
         class="sm:text-xl sm:font-light max-w-sm lg:max-w-md mx-auto text-gray-700 w-2/3"
       >
-        Contamos con un equipo de maestros, reconocidos internacionalmente por
-        su experiencia y trayectoria en el mundo del ajedrez, están aquí para
+        Nuestro equipo de maestros, reconocidos internacionalmente por su
+        experiencia y trayectoria en el mundo del ajedrez, están aquí para
         acompañarte en cada paso del camino.
       </p>
     </div>
