--- a/src/components/TeacherProfile.astro
+++ b/src/components/TeacherProfile.astro
@@ -1,13 +1,19 @@
 ---
 import SocialMedia from "./SocialMedia.astro";
-const { photo, name, chessTitle, socialMedia, isInverted } = Astro.props;
+const {
+  photo,
+  name,
+  chessTitle,
+  socialMedia,
+  isInverted = false,
+} = Astro.props;
 ---
 
 <div
-  class="relative flex flex-col md:flex-row md:space-x-5 space-y-3 md:space-y-0 rounded-xl shadow-lg p-3 max-w-screen-md md:max-w-screen-lg mx-auto border border-white bg-white"
+  class="relative flex flex-col md:flex-row gap-5 space-y-3 md:space-y-0 rounded-xl shadow-lg p-3 max-w-screen-md md:max-w-screen-xl mx-auto border border-white bg-white"
 >
   <div
-    class=`w-full md:w-1/2 bg-white grid place-items-center ${isInverted && "md:order-2"}`
+    class=`w-full md:w-1/2 bg-white grid place-items-center ${isInverted ? "md:order-2":""}`
   >
     <img
       class="h-full object-cover rounded-xl"
@@ -16,7 +22,7 @@ const { photo, name, chessTitle, socialMedia, isInverted } = Astro.props;
     />
   </div>
   <div
-    class=`w-full md:w-1/2 bg-white flex flex-col p-3 gap-2 ${isInverted && "md:order-1"}`
+    class=`w-full md:w-1/2 bg-white flex flex-col p-3 gap-2 ${isInverted ? "md:order-1":""}`
   >
     <div class="flex justify-between item-center">
       <p class="text-gray-500 font-medium hidden md:block">Argentina</p>
@@ -33,7 +39,7 @@ const { photo, name, chessTitle, socialMedia, isInverted } = Astro.props;
     <div>
       <slot />
     </div>
-    <div class="flex flex-row gap-4 justify-center flex-wrap mt-4 md:mt-auto">
+    <div class="flex flex-row gap-4 justify-center flex-wrap pt-6 md:mt-auto">
       <SocialMedia socialMedia={socialMedia} />
     </div>
   </div>
